-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 22, 23
-
Component/s: hotspot
-
b03
-
x86_64
-
generic
- Correct incorrect instruction attributes in legacy integral gather instructions.
- Optimize integral gather mask computation using cheaper instructions.
- Optimize integral gather mask computation using cheaper instructions.
- relates to
-
JDK-8223347 Integration of Vector API (Incubator)
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/76637c53
-
Review(master)
openjdk/jdk/17048