8321648: Integral gather optimized mask computation.